docs: Update EgovFramework Conversion 3.7